1998-06-09  Alex Lancaster  <alex@santafe.edu>

	* overmeta.sgml: Changed corpauthor to be inserted from Global
	public identifiers.

1998-06-08  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* overbook.sgml: Use public identifiers.

1998-06-04  Alex Lancaster  <alex@santafe.edu>

	* over02.sgml, over03.sgml, over04.sgmL: Fixed inappropriately
	positioned PARA tags.

1998-05-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

	* Makefile: Remove.

	* overbook.tex.in: New file.

	* overbook.sgml: Set ID of book to "overbook".

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Begin revision log.
