@@ -1,4 +1,13 @@
 NAME = overbook
-SGML_FILES = over01.sgml over02.sgml over03.sgml over04.sgml over05.sgml overbook.sgml overcont.sgml overmeta.sgml  
+
+SGML=over01.sgml over02.sgml over03.sgml over04.sgml over05.sgml overbook.sgml overcont.sgml overmeta.sgml  
+
+GENERATED_SGML=overrevhistory.sgml
+
+noinst_DATA = $(GENERATED_SGML)
+
+SGML_FILES = $(SGML) $(GENERATED_SGML)
 
 include $(top_srcdir)/Makefile.rules
+
+
