@@ -30,15 +30,7 @@
     
   </ABSTRACT>
   
-  <REVHISTORY>
-    <REVISION>
-      <REVNUMBER>1.1</REVNUMBER> 
-      <DATE>1998-05-13</DATE>
-      <AUTHORINITIALS>mgd, alex, lee</AUTHORINITIALS>
-      <REVREMARK>Created new SGML documentation from former HTML
-      docs</REVREMARK>
-    </REVISION>
-  </REVHISTORY>
+  &overrevhistory.sgml;
   
 </BOOKINFO>
 
